--- a/index.html
+++ b/index.html
@@ -4,12 +4,93 @@
 	<meta charset="UTF-8">
 	<title>Freelancer</title>
 	<!-- Enlaza aquí tu CSS común y de tu proyecto -->
-
+	<link rel="stylesheet"  href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 	<!-- Escribe tu código aquí -->
+	<header>
+		<p class="text-uppercase">Start Bootstrap</p>
+		<a href="#" class="text-uppercase link">Portafolio</a>
+		<a href="#" class="text-uppercase link">About</a>
+		<a href="#" class="text-uppercase link">Contact</a>
+	</header>
+	<section id="home">
+		<div class="container">
+			<img src= "assets/images/profile.png" alt="portafolio">
+			<h1 class="text-uppercase text-home mb-0">
+				start bootstrap
+			</h1>
+			<hr class="linea">
+			<p class="mt-0">
+				Web Developer-Graphic-User Experience Designer
+			</p>
+		</div>
+	</section>
+	<section id="portfolio">
+		<div class="container">
+			<h2 class="text-uppercase text mt-0">
+				Portafolio
+			</h2>
+		</div>
+	</section>
+	<section id="gallery">
+		<div class="container">
+			<div class="row">
+				<div class="col-4 box">
+					<img src="assets/images/portfolio/cabin.png" alt="cabin" width="350">
+				</div>
+				<div class="row">
+					<div class="col-4 box">
+						<img src="assets/images/portfolio/cake.png" alt="cake" width="350">
+					</div>
+				</div>
+			</div>
+		</div>
+			<div class="row">
+				<div class="col-4 box">
+					<img src="assets/images/portfolio/circus.png" alt="circus" width="350">
+				</div>
+				<div class="col-4 box">
+					<img src="assets/images/portfolio/game.png" alt="game" width="350">
+				</div>
+				<div class="col-4 box">
+					<img src="assets/images/portfolio/safe.png" alt="safe" width="350">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-4 box">
+					<img src="assets/images/portfolio/submarine.png" alt="submarine" width="350">
+				</div>
+			</div>
+
+	</section>
+	<section id="about">
+		<div class="container">
+			<h1 class="text-uppercase text-home mb-0">
+					about
+			</h1>
+			<div class="row">
+				<div class="col-2 box">
+					<p class="mt-0">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.</p>
+				<div class="row">
+					<div class="col-2 box">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</section>
+	<footer>
+		<p>© Copyright</p>
+	</footer>
+
 
 	<!-- Enlaza aquí tu archivo JS -->
+	<script type="js/app.js"></script>
 	
 </body>
 </html>
