--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
 					about
 			</h1>
 			<div class="row">
-				<div class="col-2 box">
-					<p class="mt-0">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.</p>
+				<div class="col-6">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.</p>
 				<div class="row">
-					<div class="col-2 box">
+					<div class="col-6">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.
 						</p>
 					</div>
@@ -87,8 +86,6 @@
 	<footer>
 		<p>© Copyright</p>
 	</footer>
-
-
 	<!-- Enlaza aquí tu archivo JS -->
 	<script type="js/app.js"></script>
 	
