grid, about, inicio contactme, footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			<h1 class="text-uppercase text-home mb-0">
 				start bootstrap
 			</h1>
-			<hr class="linea">
 			<p class="mt-0">
 				Web Developer-Graphic-User Experience Designer
 			</p>
@@ -30,40 +29,41 @@
 	<section id="portfolio">
 		<div class="container">
 			<h2 class="text-uppercase text mt-0">
-				Portafolio
+				Portfolio
 			</h2>
 		</div>
 	</section>
 	<section id="gallery">
 		<div class="container">
+
 			<div class="row">
 				<div class="col-4 box">
 					<img src="assets/images/portfolio/cabin.png" alt="cabin" width="350">
 				</div>
-				<div class="row">
-					<div class="col-4 box">
-						<img src="assets/images/portfolio/cake.png" alt="cake" width="350">
-					</div>
+
+				<div class="col-4 box">
+					<img src="assets/images/portfolio/cake.png" alt="cake" width="350">
 				</div>
-			</div>
-		</div>
-			<div class="row">
+
 				<div class="col-4 box">
 					<img src="assets/images/portfolio/circus.png" alt="circus" width="350">
 				</div>
+			</div>
+
+			<div class="row">
 				<div class="col-4 box">
 					<img src="assets/images/portfolio/game.png" alt="game" width="350">
 				</div>
+						
 				<div class="col-4 box">
 					<img src="assets/images/portfolio/safe.png" alt="safe" width="350">
 				</div>
-			</div>
-			<div class="row">
+			
 				<div class="col-4 box">
 					<img src="assets/images/portfolio/submarine.png" alt="submarine" width="350">
 				</div>
 			</div>
-
+		</div>
 	</section>
 	<section id="about">
 		<div class="container">
@@ -72,19 +72,29 @@
 			</h1>
 			<div class="row">
 				<div class="col-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.</p>
-				<div class="row">
-					<div class="col-6">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien. Nam rutrum dolor eget molestie tincidunt. Morbi vehicula venenatis efficitur. Vestibulum vel vehicula turpis. Nullam eu ante dapibus, egestas nunc vel, volutpat turpis. Pellentesque et interdum arcu. Vivamus viverra vel turpis ac cursus. Duis tristique tempus eros eget vehicula. Integer mi lorem, sollicitudin elementum rutrum ac, efficitur eget est.
-						</p>
-					</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien.</p>
+				</div>
+				<div class="col-6">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien.</p>
 				</div>
 			</div>
 		</div>
+	</section>
+	<section id="contactme">
+		<div class="container">
+			<hr>
+			<input type="text" required id="name" placeholder="Name">
+			<hr>
+			<input type="email" required id="email" placeholder="Email Address">
+			<hr>
+			<input type="text" required id="phone" placeholder="Phone Number">
+			<hr>
+			<input type="text" required id="message" placeholder="Message">
+			<hr>
 		</div>
 	</section>
 	<footer>
-		<p>© Copyright</p>
+		<p>Copyright © Your Website 2016</p>
 	</footer>
 	<!-- Enlaza aquí tu archivo JS -->
 	<script type="js/app.js"></script>
