information, contactme, starline

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<h1 class="text-uppercase text-home mb-0">
 				start bootstrap
 			</h1>
+			<h2 class="starline">&#9135;&#9135;&#9135;&#9135; &#128970; &#9135;&#9135;&#9135;&#9135;
+			</h2>
 			<p class="mt-0">
 				Web Developer-Graphic-User Experience Designer
 			</p>
@@ -30,6 +32,8 @@
 		<div class="container">
 			<h2 class="text-uppercase text mt-0">
 				Portfolio
+			</h2>
+			<h2 class="starline">&#9135;&#9135;&#9135;&#9135; &#128970; &#9135;&#9135;&#9135;&#9135;
 			</h2>
 		</div>
 	</section>
@@ -67,9 +71,11 @@
 	</section>
 	<section id="about">
 		<div class="container">
-			<h1 class="text-uppercase text-home mb-0">
+			<h2 class="text-uppercase text-home mb-0">
 					about
-			</h1>
+			</h2>
+			<h2 class="starline">&#9135;&#9135;&#9135;&#9135; &#128970; &#9135;&#9135;&#9135;&#9135;
+			</h2>
 			<div class="row">
 				<div class="col-6">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi sed risus sodales elementum. Phasellus placerat, eros sit amet lacinia interdum, quam augue semper tellus, ac mollis leo velit vitae velit. Ut tristique leo sed diam pulvinar tincidunt in eget velit. Aliquam ultrices sagittis risus, at euismod arcu auctor sed. Morbi vulputate nulla et accumsan rutrum. Maecenas euismod ipsum lorem, sit amet ullamcorper erat dictum sed. Mauris nunc lorem, pulvinar imperdiet feugiat et, bibendum id sapien.</p>
@@ -82,6 +88,11 @@
 	</section>
 	<section id="contactme">
 		<div class="container">
+			<h2 class="text-uppercase text-contactme mb-0">
+					contact me
+			</h2>
+			<h2 class="starline">&#9135;&#9135;&#9135;&#9135; &#128970; &#9135;&#9135;&#9135;&#9135;
+			</h2>
 			<hr>
 			<input type="text" required id="name" placeholder="Name">
 			<hr>
@@ -91,6 +102,34 @@
 			<hr>
 			<input type="text" required id="message" placeholder="Message">
 			<hr>
+		</div>
+	</section>
+	<section id="information">
+		<div class="container">
+			<div class="row">
+				<div class="col-4 text-uppercase text-information mb-0">
+					location
+				</div>
+				<div class="col-4 text-uppercase text-information mb-0">
+					around the web
+				</div>
+				<div class="col-4 text-uppercase text-information mb-0">
+					about freelancer
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-4">
+					3481 Melrose Place
+					Beverly Hills,CA 90210
+				</div>
+				<div class="col-4 text-uppercase">
+					ICONOS
+				</div>
+				<div class="col-4">
+					Freelance is a free to use, open source
+					Bootstrap theme created by<a href="#">Start Bootstrap.</a>
+				</div>
+			</div>
 		</div>
 	</section>
 	<footer>
