https font awesome

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Enlaza aquí tu CSS común y de tu proyecto -->
 	<link rel="stylesheet"  href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
 	<!-- Escribe tu código aquí -->
